@@ -28,7 +28,6 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.Iterator;
-import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -213,100 +212,95 @@ public class DefaultLifecycleRegistry implements LifecycleRegistry {
                         .filter(id -> !Lifecycle.CLEAN.equals(id)
                                 && !Lifecycle.DEFAULT.equals(id)
                                 && !Lifecycle.SITE.equals(id))
-                        .map(id -> wrap(all.get(id)))
+                        .map(id -> (Lifecycle) new WrappedLifecycle(all.get(id)))
                         .toList();
             } catch (ComponentLookupException e) {
                 throw new LookupException(e);
             }
         }
+    }
 
-        private Lifecycle wrap(org.apache.maven.lifecycle.Lifecycle lifecycle) {
-            return new Lifecycle() {
-                @Override
-                public String id() {
-                    return lifecycle.getId();
-                }
+    /**
+     * Record implementation of Lifecycle.Phase for wrapped phases.
+     *
+     * @param name The name of the phase
+     * @param prev The name of the previous phase (may be null)
+     * @param lifecycle The original Maven 3 lifecycle
+     */
+    record WrappedPhase(String name, String prev, org.apache.maven.lifecycle.Lifecycle lifecycle)
+            implements Lifecycle.Phase {
+        /**
+         * Compact constructor with null validation.
+         */
+        WrappedPhase {
+            Objects.requireNonNull(name, "name cannot be null");
+            Objects.requireNonNull(lifecycle, "lifecycle cannot be null");
+            // prev can be null for the first phase
+        }
 
-                @Override
-                public Collection<Phase> phases() {
-                    List<String> names = lifecycle.getPhases();
-                    List<Phase> phases = new ArrayList<>();
-                    for (int i = 0; i < names.size(); i++) {
-                        String name = names.get(i);
-                        String prev = i > 0 ? names.get(i - 1) : null;
-                        phases.add(new Phase() {
-                            @Override
-                            public String name() {
-                                return name;
-                            }
+        @Override
+        @Nonnull
+        public List<Lifecycle.Phase> phases() {
+            return List.of();
+        }
 
-                            @Override
-                            public List<Phase> phases() {
-                                return List.of();
-                            }
+        @Override
+        @Nonnull
+        public List<Plugin> plugins() {
+            Map<String, LifecyclePhase> lfPhases = lifecycle.getDefaultLifecyclePhases();
+            return lfPhases != null
+                    ? List.copyOf(DefaultPackagingRegistry.parseLifecyclePhaseDefinitions(lfPhases))
+                    : List.of();
+        }
 
-                            @Override
-                            public Stream<Phase> allPhases() {
-                                return Stream.concat(
-                                        Stream.of(this), phases().stream().flatMap(Lifecycle.Phase::allPhases));
-                            }
-
-                            @Override
-                            public List<Plugin> plugins() {
-                                Map<String, LifecyclePhase> lfPhases = lifecycle.getDefaultLifecyclePhases();
-                                LifecyclePhase phase = lfPhases != null ? lfPhases.get(name) : null;
-                                if (phase != null) {
-                                    Map<String, Plugin> plugins = new LinkedHashMap<>();
-                                    DefaultPackagingRegistry.parseLifecyclePhaseDefinitions(plugins, name, phase);
-                                    return plugins.values().stream().toList();
-                                }
-                                return List.of();
-                            }
-
-                            @Override
-                            public Collection<Link> links() {
-                                if (prev == null) {
-                                    return List.of();
-                                } else {
-                                    return List.of(new Link() {
-                                        @Override
-                                        public Kind kind() {
-                                            return Kind.AFTER;
-                                        }
-
-                                        @Override
-                                        public Pointer pointer() {
-                                            return new Pointer() {
-                                                @Override
-                                                public String phase() {
-                                                    return prev;
-                                                }
-
-                                                @Override
-                                                public Type type() {
-                                                    return Type.PROJECT;
-                                                }
-                                            };
-                                        }
-                                    });
-                                }
-                            }
-                        });
-                    }
-                    return phases;
-                }
-
-                @Override
-                public Collection<Alias> aliases() {
-                    return Collections.emptyList();
-                }
-            };
+        @Override
+        @Nonnull
+        public Collection<Lifecycle.Link> links() {
+            if (prev == null) {
+                return List.of();
+            } else {
+                return List.of(new Lifecycles.DefaultLink(
+                        Lifecycle.Link.Kind.AFTER, new Lifecycles.DefaultPhasePointer(prev)));
+            }
         }
     }
 
-    static class WrappedLifecycle extends org.apache.maven.lifecycle.Lifecycle {
-        WrappedLifecycle(LifecycleRegistry registry, Lifecycle lifecycle) {
-            super(registry, lifecycle);
+    /**
+     * Record implementation of Lifecycle for wrapped lifecycles.
+     *
+     * @param lifecycle The original Maven 3 lifecycle
+     */
+    record WrappedLifecycle(org.apache.maven.lifecycle.Lifecycle lifecycle) implements Lifecycle {
+        /**
+         * Compact constructor with null validation.
+         */
+        WrappedLifecycle {
+            Objects.requireNonNull(lifecycle, "lifecycle cannot be null");
+        }
+
+        @Override
+        @Nonnull
+        public String id() {
+            return lifecycle.getId();
+        }
+
+        @Override
+        @Nonnull
+        public Collection<Phase> phases() {
+            List<String> names = lifecycle.getPhases();
+            List<Phase> phases = new ArrayList<>();
+            for (int i = 0; i < names.size(); i++) {
+                String name = names.get(i);
+                String prev = i > 0 ? names.get(i - 1) : null;
+                phases.add(new WrappedPhase(name, prev, lifecycle));
+            }
+            return phases;
+        }
+
+        @Override
+        @Nonnull
+        public Collection<Alias> aliases() {
+            return List.of();
         }
     }
 
@@ -324,7 +318,7 @@ public class DefaultLifecycleRegistry implements LifecycleRegistry {
         public org.apache.maven.lifecycle.Lifecycle get() {
             try {
                 LifecycleRegistry registry = lookup.lookup(LifecycleRegistry.class);
-                return new WrappedLifecycle(registry, registry.require(name));
+                return new org.apache.maven.lifecycle.Lifecycle(registry, registry.require(name));
             } catch (ComponentLookupException e) {
                 throw new LookupException(e);
             }
